[package]
name = "ruinable"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["blocking", "rustls-tls"] }
futures = "*"
clap = "4.3.11"
rand = "0.8.5"
url = "2.4.0"
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
colored = "2.0.4"
tokio-util = "0.7.8"
lazy_static = "1.5.0"

